data/derived/comb/progs/unify/prog4374.ml.out
Characters 107-108:
  | h::t -> f h t in
                ^
Error: This expression has type ('a -> 'b) list
       but an expression was expected of type 'c -> 'a
